# CppTry

./: .gitignore  CMakeLists.txt  foo.cfg  main.cpp
my_lib/: lib_foo.cpp  lib_foo.h
